--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,13 @@ console_error_panic_hook = "0.1.7"
 # Networking and parsing
 gloo-net = "0.6"
 serde_urlencoded = "0.7"
-quick-xml = "0.28"
+quick-xml = "0.39"
 html-escape = "0.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 
-[target.'cfg(test)'.dependencies]
+[dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
 
 [workspace]
